--- a/index.html
+++ b/index.html
@@ -1,5 +1,14 @@
-<html>
-    <title>Index</title>
-    <h1>Hello world </h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>sem mundial</title>
 
+</head>
+<body>
+
+<h4>O <span style="font-size: small; color: green;">palmeiras</span> não tem mundial </h4>
+
+</body>
 </html>
